--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -2,67 +2,41 @@ project_name: dfs
 
 release:
   prerelease: auto
-
+env:
+  - GO111MODULE=on
+  - CGO_ENABLED=1
+before:
+  hooks:
+    - go mod download
 builds:
-  - id: dfs-linux
+  - id: dfs-darwin-amd64
     main: ./cmd/dfs
     binary: dfs
-    flags:
-      - -v
-      - -trimpath
-    ldflags:
-      - -s -w
-      - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
-      - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
-    env:
-      - CGO_ENABLED=0
-    goos:
-      - linux
-    goarch:
-      - amd64
-      - 386
-      - arm64
-      - arm
-    goarm:
-      - 7
-  - id: dfs-darwin
-    main: ./cmd/dfs
-    binary: dfs
-    flags:
-      - -v
-      - -trimpath
-    ldflags:
-      - -s -w
-      - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
-      - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
-    env:
-      - CGO_ENABLED=0
     goos:
       - darwin
     goarch:
       - amd64
-      - arm64
-  - id: dfs-windows
+    env:
+      - CC=o64-clang
+      - CXX=o64-clang++
+    flags:
+      - -v
+      - -trimpath
+    ldflags:
+      - -s -w
+      - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
+      - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
+      - -linkmode=external
+  - id: dfs-darwin-arm64
     main: ./cmd/dfs
     binary: dfs
-    flags:
-      - -v
-      - -trimpath
-    ldflags:
-      - -s -w
-      - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
-      - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
-    env:
-      - CGO_ENABLED=0
     goos:
-      - windows
+      - darwin
     goarch:
-      - amd64
-      - 386
-
-  - id: dfs-cli-linux
-    main: ./cmd/dfs-cli
-    binary: dfs_cli
+      - arm64
+    env:
+      - CC=oa64-clang
+      - CXX=oa64-clang++
     flags:
       - -v
       - -trimpath
@@ -70,20 +44,17 @@ builds:
       - -s -w
       - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
       - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
-    env:
-      - CGO_ENABLED=0
+      - -linkmode=external
+  - id: dfs-linux-amd64
+    main: ./cmd/dfs
+    binary: dfs
     goos:
       - linux
     goarch:
       - amd64
-      - 386
-      - arm64
-      - arm
-    goarm:
-      - 7
-  - id: dfs-cli-darwin
-    main: ./cmd/dfs-cli
-    binary: dfs_cli
+    env:
+      - CC=x86_64-linux-gnu-gcc
+      - CXX=x86_64-linux-gnu-g++
     flags:
       - -v
       - -trimpath
@@ -91,16 +62,18 @@ builds:
       - -s -w
       - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
       - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
-    env:
-      - CGO_ENABLED=0
+      - -linkmode=external
+      - -extldflags "-lc -lrt -lpthread --static"
+  - id: dfs-linux-arm64
+    main: ./cmd/dfs
+    binary: dfs
     goos:
-      - darwin
+      - linux
     goarch:
-      - amd64
       - arm64
-  - id: dfs-cli-windows
-    main: ./cmd/dfs-cli
-    binary: dfs_cli
+    env:
+      - CC=aarch64-linux-gnu-gcc
+      - CXX=aarch64-linux-gnu-g++
     flags:
       - -v
       - -trimpath
@@ -108,14 +81,27 @@ builds:
       - -s -w
       - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
       - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
-    env:
-      - CGO_ENABLED=0
+      - -linkmode=external
+      - -extldflags "-lc -lrt -lpthread --static"
+  - id: dfs-windows-amd64
+    main: ./cmd/dfs
+    binary: dfs
     goos:
       - windows
     goarch:
       - amd64
-      - 386
-
+    env:
+      - CC=x86_64-w64-mingw32-gcc
+      - CXX=x86_64-w64-mingw32-g++
+    flags:
+      - -v
+      - -trimpath
+      - -buildmode=exe
+    ldflags:
+      - -s -w
+      - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
+      - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
+      - -linkmode=external
 archives:
   - id: binary
     name_template: '{{ .Binary }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ with .Arm }}v{{ . }}{{ end }}{{ with .Mips }}_{{ . }}{{ end }}{{ if not (eq .Amd64 "v1") }}{{ .Amd64 }}{{ end }}'
@@ -132,7 +118,7 @@ dockers:
       - "fairdatasociety/fairos-dfs:v{{ .Version }}-amd64"
     use: buildx
     ids:
-      - dfs-linux
+      - dfs-linux-amd64
     goarch: amd64
     dockerfile: Dockerfile.goreleaser
     build_flag_templates:
@@ -143,29 +129,14 @@ dockers:
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
       - "--label=org.opencontainers.image.version={{.Version}}"
   - image_templates:
-      - "fairdatasociety/fairos-dfs:v{{ .Version }}-armv7"
+      - "fairdatasociety/fairos-dfs:v{{ .Version }}-arm64"
     use: buildx
     ids:
-      - dfs-linux
-    goarch: arm
-    goarm: 7
-    dockerfile: Dockerfile.goreleaser
-    build_flag_templates:
-      - "--platform=linux/arm/v7"
-      - "--pull"
-      - "--label=org.opencontainers.image.created={{.Date}}"
-      - "--label=org.opencontainers.image.title={{.ProjectName}}"
-      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.version={{.Version}}"
-  - image_templates:
-      - "fairdatasociety/fairos-dfs:v{{ .Version }}-arm64v8"
-    use: buildx
-    ids:
-      - dfs-linux
+      - dfs-linux-arm64
     goarch: arm64
     dockerfile: Dockerfile.goreleaser
     build_flag_templates:
-      - "--platform=linux/arm64/v8"
+      - "--platform=linux/arm64"
       - "--pull"
       - "--label=org.opencontainers.image.created={{.Date}}"
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
@@ -175,22 +146,18 @@ docker_manifests:
   - name_template: fairdatasociety/fairos-dfs:v{{ .Major }}
     image_templates:
       - fairdatasociety/fairos-dfs:v{{ .Version }}-amd64
-      - fairdatasociety/fairos-dfs:v{{ .Version }}-armv7
-      - fairdatasociety/fairos-dfs:v{{ .Version }}-arm64v8
+      - fairdatasociety/fairos-dfs:v{{ .Version }}-arm64
     skip_push: auto
   - name_template: fairdatasociety/fairos-dfs:v{{ .Major }}.{{ .Minor }}
     image_templates:
       - fairdatasociety/fairos-dfs:v{{ .Version }}-amd64
-      - fairdatasociety/fairos-dfs:v{{ .Version }}-armv7
-      - fairdatasociety/fairos-dfs:v{{ .Version }}-arm64v8
+      - fairdatasociety/fairos-dfs:v{{ .Version }}-arm64
     skip_push: auto
   - name_template: fairdatasociety/fairos-dfs:v{{ .Major }}.{{ .Minor }}.{{ .Patch }}{{ with .Prerelease }}-{{ . }}{{ end }}
     image_templates:
       - fairdatasociety/fairos-dfs:v{{ .Version }}-amd64
-      - fairdatasociety/fairos-dfs:v{{ .Version }}-armv7
-      - fairdatasociety/fairos-dfs:v{{ .Version }}-arm64v8
+      - fairdatasociety/fairos-dfs:v{{ .Version }}-arm64
   - name_template: fairdatasociety/fairos-dfs:latest
     image_templates:
       - fairdatasociety/fairos-dfs:v{{ .Version }}-amd64
-      - fairdatasociety/fairos-dfs:v{{ .Version }}-armv7
-      - fairdatasociety/fairos-dfs:v{{ .Version }}-arm64v8
+      - fairdatasociety/fairos-dfs:v{{ .Version }}-arm64
