--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         go: [1.17]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [windows-latest]
     steps:
     - name: Setup Go
       uses: actions/setup-go@v1
@@ -48,5 +48,4 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: make test-race
     - name: Test
-      if: matrix.os != 'windows-latest'
       run: make test
