--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,14 +38,14 @@ jobs:
           ${{ runner.OS }}-build-${{ env.cache-name }}-
           ${{ runner.OS }}-build-
           ${{ runner.OS }}-
-    - name: Lint
-      run: make lint
-    - name: Vet
-      run: make vet
-    - name: Build
-      run: make build
-    - name: Test with Race Detector
-      if: matrix.os == 'ubuntu-latest'
-      run: make test-race
+#    - name: Lint
+#      run: make lint
+#    - name: Vet
+#      run: make vet
+#    - name: Build
+#      run: make build
+#    - name: Test with Race Detector
+#      if: matrix.os == 'ubuntu-latest'
+#      run: make test-race
     - name: Test
       run: make test
