--- a/.github/workflows/coverge.yml
+++ b/.github/workflows/coverge.yml
@@ -24,6 +24,6 @@ jobs:
         env:
           DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
         run: |
-          go test -coverprofile=cover.out ./...
+          go test -coverprofile=cover.out $(go list ./... | grep -v wasm)
           curl https://deepsource.io/cli | sh
           ./bin/deepsource report --analyzer test-coverage --key go --value-file ./cover.out
