--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,8 +39,10 @@ jobs:
           ${{ runner.OS }}-build-
           ${{ runner.OS }}-
     - name: Lint
+      if: matrix.os == 'ubuntu-latest'
       run: make lint
     - name: Vet
+      if: matrix.os == 'ubuntu-latest'
       run: make vet
     - name: Test with Race Detector
       if: matrix.os == 'ubuntu-latest'
