--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -63,6 +63,8 @@ jobs:
           unzip sdk-tools.zip -d $HOME/android-sdk
           echo "y" | $HOME/android-sdk/cmdline-tools/bin/sdkmanager --sdk_root=$HOME/android-sdk "platform-tools" "build-tools;30.0.3"
           export PATH=$PATH:$HOME/android-sdk/platform-tools
+          rm sdk-tools.zip
+          go mod tidy
       - name: Install gomobile
         run: go install golang.org/x/mobile/cmd/gomobile@latest
       - name: Build android aar
