--- a/.github/workflows/coverge.yml
+++ b/.github/workflows/coverge.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v1
         with:
-          go-version: 1.20
+          go-version: '1.20.1'
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
       - name: Report results to DeepSource
