--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -70,6 +70,9 @@ jobs:
       - name: Build android aar
         run: |
           make android
+      - name: Git checkout
+        run: |
+          git checkout .
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
