chore: #613, update bee to v2

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,12 @@
 run:
   timeout: 10m
+  concurrency: 4
+  tests: false
+
 linters:
   enable:
     - misspell
     - gofmt
     - unconvert
+issues:
+  exclude-dirs: ["wasm"]
