--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -74,11 +74,11 @@ jobs:
         run: |
           git checkout .
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
+        uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
           version: latest
-          args: release --rm-dist --config .goreleaser-mobile.yaml
+          args: release --clean --config .goreleaser-mobile.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
